--- a/codigo/lado b/b.html
+++ b/codigo/lado b/b.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>armero lado b</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>Galería Polaroid</title>
+    <link rel="stylesheet" href="../estilos/armero.css">
 </head>
 <body>
-    <img src="../../recursos/imagenes/proyecto incompleto.jpeg">
-    <p>
-        Si te he fallado te pido perdon de la única forma que se <br>
-         abriendo las puertas de mi corazon para cuando decidas volver <br>
-         porque nunca habra nadie que pueda llenar el vacio que dejastes en mi <br>
-         me has cambiado mi vida me has hecho crecer es que <br>
-         no soy el mismo de ayer un día es un siglo sin ti
-    </p>
+    <section id="lado b" class="pantalla pantalla-a fondo-b">  
+          <div class="container">
+        <div class="polaroid-grid">
+            <img id="btn-atras" src="../../recursos/imagenes/atras.png" alt="atras" class="nav-btn">
+        </div>
+    </div>   
+    </section>
+    <script src="b.js"></script>
 </body>
 </html>
