--- a/codigo/lado b/b.html
+++ b/codigo/lado b/b.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Galería Polaroid</title>
+    <title>Galería negative</title>
     <link rel="stylesheet" href="../estilos/armero.css">
 </head>
 <body>
-    <section id="lado b" class="pantalla pantalla-a fondo-b">  
+    <section id="lado a" class="pantalla pantalla-a fondo-b">  
           <div class="container">
         <div class="polaroid-grid">
             <img id="btn-atras" src="../../recursos/imagenes/atras.png" alt="atras" class="nav-btn">
         </div>
     </div>   
     </section>
+    <!-- Audio agregado -->
+    <audio id="backgroundio" loop autoplay>
+        <source src="../../recursos/sonoros/b.mp3" type="audio/mpeg">
+    </audio>
+    
     <script src="b.js"></script>
 </body>
 </html>
