--- a/final.html
+++ b/final.html
@@ -33,13 +33,14 @@
             </div>
     </section>
  
-    <!-- Sección 2: foto memoria -->
-    <section id="seccion-memoria" class="seccion">
-        <div>
-            <a href="#agradecimiento"><img src="recursos/imagenes/imagenes armero nuevo/instalaciones-del-cva.jpg"></a>
-        </div>
-    </section>
-
+   <!-- Sección 2: foto memoria -->
+<section id="seccion-memoria" class="seccion">
+    <div>
+        <a href="#agradecimiento">
+            <img src="recursos/imagenes/imagenes armero nuevo/instalaciones-del-cva.jpg" alt="Memoria de Armero">
+        </a>
+    </div>
+</section>
     <!-- Sección 3: agradecimiento -->
     <section id="agradecimiento" class="seccion">
         <div class="contenedor-historia">
