--- a/codigo/lado a/a_exp.html
+++ b/codigo/lado a/a_exp.html
@@ -50,6 +50,6 @@
             <p id="texto-imagen">Descripción de la imagen...</p>
         </div>
     </div>
-    <script src="a_exp.html"></script>
+    <script src="a_exp.js"></script>
 </body>
 </html>
