--- a/codigo/lado b/b.html
+++ b/codigo/lado b/b.html
@@ -38,7 +38,7 @@
         </a>
         
         <!-- Flecha de siguiente sección (inicialmente oculta) -->
-        <a href="final.html" class="flecha-volver abajo-derecha" id="flecha-siguiente" style="display: none;">
+        <a href="../../final.html" class="flecha-volver abajo-derecha" id="flecha-siguiente" style="display: none;">
             <img src="../../recursos/imagenes/adelante.png" alt="Siguiente sección">
         </a>
         
