pantalla cum pleta

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="#seccion-historia">
             <h1 class="titulo-principal">RECUERDOS</h1>
             <h2 class="subtitulo-link">DE ARMERO</h2>
+            <p>!para verse en telefono se recomienda en pantalla completa en horisontal para una mejor experiencia gracias¡</p>
         </a>
         <a href="#creditos"><p class="flecha-volver abajo-derecha">creditos</p></a>
         </div>
