--- a/recursos/imagenes/galeria.html
+++ b/recursos/imagenes/galeria.html
@@ -263,9 +263,9 @@
         
         <!-- Sección Armero Nuevo -->
         <section class="categoria">
-            <h2>Armero Nuevo</h2>
+            <h2>instalaciones turisticas</h2>
             <div class="categoria-info">
-                Imágenes del Armero actual y sus instalaciones después de la reconstrucción.
+                instalacion turistica del chat.
             </div>
             <div class="galeria-completa" id="galeria-nuevo">
                 <!-- Las imágenes se cargarán con JavaScript -->
