--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             <h3>Programación y Experiencia</h3>
             <p>jhon castellanos</p>
         </div>
+        <div class="credit-block">
+            <h3>composicion musical</h3>
+            <p>Rafael falla nieto</p>
+        </div>
 
         <div class="credit-block">
             <h3>Diseño de experiencia</h3>
