--- a/codigo/lado a/a.html
+++ b/codigo/lado a/a.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lado A - Control</title>
     <link rel="stylesheet" href="../estilos/armero.css">
+    <link rel="icon" type="image/png" href="../../recursos/imagenes/logos/Logo - Conmemoración Armero_1-03.png">
     <style>
         .flecha-siguiente {
             position: fixed;
@@ -135,7 +136,7 @@
             </audio>
             <div class="galeria">
                 <!-- Tus imágenes aquí (sin cambios) -->
-                <a href="a_exp.html" class="item-galeria" data-texto="Caja Agraria" data-imagen="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.17.51_3a27fd43.jpg" data-descripcion="Mi infancia transcurrió muy normal, como todo niño bien cuidado en casa, tomando agua hervida, a pesar de que el agua de Armero era de las mejores del Tolima, casi de Colombia, muy buena agua, muy bien tratada, tenía una planta de tratamiento de las mejores.">
+                <a href="a_exp.html" class="item-galeria" data-texto="Caja Agraria" data-imagen="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.17.51_3a27fd43.jpg" data-descripcion="Mi infancia transcurrió muy normal, como todo niño bien cuidado en casa, tomando agua hervida, a pesar de que el agua de Armero era de las mejores del Tolima, casi de Colombia. Era muy buena agua, muy bien tratada; tenía una planta de tratamiento de las mejores.">
                     <img src="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.17.51_3a27fd43.jpg" alt="Caja Agraria">
                     <p>Caja Agraria</p>
                 </a>
@@ -145,7 +146,8 @@
                     <p>Hospital San Lorenzo</p>
                 </a>
 
-                <a href="a_exp.html" class="item-galeria" data-texto="Banco Cafetero" data-imagen="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.22.22_45ff1e78.jpg" data-descripcion="No necesitamos ir a Ibagué a hacer compras porque allí estaba todo, una niñez donde compartíamos, íbamos al río con la familia, montábamos bicicleta, participamos del cine porque el Teatro Bolívar para nosotros fue algo que nos marcó el ir a cine desde muy pequeño a ver películas,Todas las cosas, el comercio que tenía Armero, a veces con mi hermano íbamos a la gaseosa la bogotana a trabajar en las tardes. ">
+                <a href="a_exp.html" class="item-galeria" data-texto="Banco Cafetero" data-imagen="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.22.22_45ff1e78.jpg" data-descripcion="No necesitábamos ir a Ibagué a hacer compras porque allí estaba todo. Una niñez donde compartíamos, íbamos al río con la familia, montábamos bicicleta y participábamos del cine, porque el Teatro Bolívar para nosotros fue algo que nos marcó: ir al cine desde muy pequeño a ver películas.
+ El comercio que tenía Armero era muy amplio; a veces, con mi hermano, íbamos a la gaseosa “La Bogotana” a trabajar en las tardes.">
                     <img src="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.22.22_45ff1e78.jpg" alt="Banco Cafetero">
                     <p>Banco Cafelero</p>
                 </a>
@@ -155,7 +157,8 @@
                     <p>Colegio La Sagrada Familia</p>
                 </a>
 
-                <a href="a_exp.html" class="item-galeria" data-texto="Iglesia del Carmen" data-imagen="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.16.50_506bcccd.jpg" data-descripcion="Fuimos atrapados por el desastre cerca a la iglesia del Carmen, quedamos atrapados con el lodo al cuello con mi familia y es una historia un poco triste en pasar una noche en donde la inseguridad, si venía más avalanchas, se lo llevará a uno sin saber de que el pueblo haya sido destruido, Solo hasta el otro día empieza uno a ver por sus propios ojos como el lodo se llevó todo y más cuando somos rescatados por el helicóptero a las 5:00 de la tarde del día 14">
+                <a href="a_exp.html" class="item-galeria" data-texto="Iglesia del Carmen" data-imagen="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.16.50_506bcccd.jpg" data-descripcion="Fuimos atrapados por el desastre cerca a la iglesia del Carmen. Quedamos con el lodo al cuello con mi familia, y es una historia un poco triste: pasar una noche con la incertidumbre de si venían más avalanchas que pudieran llevarse a uno, sin saber que el pueblo había sido destruido.
+Solo hasta el otro día empieza uno a ver, con sus propios ojos, cómo el lodo se llevó todo, y más aún cuando fuimos rescatados por un helicóptero a las 5:00 de la tarde del día 14.">
                     <img src="../../recursos/imagenes/galeria armero antiguo/Imagen de WhatsApp 2025-10-24 a las 20.16.50_506bcccd.jpg" alt="Iglesia del Carmen">
                     <p>Iglesia del Carmen</p>
                 </a>
