--- a/codigo/lado b/b.html
+++ b/codigo/lado b/b.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lado B - Control</title>
     <link rel="stylesheet" href="../estilos/armero.css">
+    <link rel="icon" type="image/png" href="../../recursos/imagenes/logos/Logo - Conmemoración Armero_1-03.png">
     <style>
         .flecha-siguiente {
             position: fixed;
@@ -139,28 +140,29 @@
                 <a href="b_exp.html" class="item-galeria polaroid-b" 
                    data-texto="B1"
                    data-imagen="../../recursos/imagenes/imagenes armero destruido/DSC_0008.jpg" 
-                   data-descripcion="uno se da cuenta que el estado nos desprotegió, nos descojó de esas grandes instituciones como la cabecera del circuito de los juzgados, como el Hospital CT de Segundo Nivel, como el Hospital Psiquiátrico y muchas como la comandancia del distrito de policía y muchas otras situaciones que eso hace que los municipios crezcan nos quitaron ese liderazgo nos dejaron el nombre de Armero para siempre pero diezmados totalmente y eso hace que tengamos que empezar desde cero ya después de tener una población de 35000 habitantes, ahora solo tenemos 15000">
+                   data-descripcion="Uno se da cuenta de que el Estado nos desprotegió. Nos despojó de grandes instituciones como la cabecera del circuito de los juzgados, el Hospital de Segundo Nivel, el Hospital Psiquiátrico, la comandancia del distrito de policía y muchas otras entidades cuya presencia impulsa el crecimiento de un municipio. Nos quitaron ese liderazgo y nos dejaron el nombre de Armero para siempre, pero profundamente diezmados.
+Eso nos obligó a empezar desde cero. Después de haber tenido una población de 35.000 habitantes, ahora apenas llegamos a 15.000.">
                     <img src="../../recursos/imagenes/imagenes armero destruido/DSC_0008.jpg" alt="Armero destruido">
                 </a>
 
                 <a href="b_exp.html" class="item-galeria polaroid-b" 
                    data-texto="B2"
                    data-imagen="../../recursos/imagenes/imagenes armero destruido/pagina 6 fotografia 2.png" 
-                   data-descripcion="">
+                   data-descripcion="Armero...">
                     <img src="../../recursos/imagenes/imagenes armero destruido/pagina 6 fotografia 2.png" alt="Armero destruido">
                 </a>
 
                 <a href="b_exp.html" class="item-galeria polaroid-b" 
                    data-texto="B3"
                    data-imagen="../../recursos/imagenes/imagenes armero destruido/DSC_0011.jpg" 
-                   data-descripcion="">
+                   data-descripcion="Aun...">
                     <img src="../../recursos/imagenes/imagenes armero destruido/DSC_0011.jpg" alt="Armero destruido">
                 </a>
 
                 <a href="b_exp.html" class="item-galeria polaroid-b" 
                    data-texto="B4"
                    data-imagen="../../recursos/imagenes/imagenes armero destruido/DSC_0001.jpg" 
-                   data-descripcion="">
+                   data-descripcion="Vive...">
                     <img src="../../recursos/imagenes/imagenes armero destruido/DSC_0001.jpg" alt="Armero destruido">
                 </a>
 
