--- a/codigo/lado b/b_exp.html
+++ b/codigo/lado b/b_exp.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lado B - Exposición</title>
     <link rel="stylesheet" href="../estilos/armero.css">
+    <link rel="icon" type="image/png" href="../../recursos/imagenes/logos/Logo - Conmemoración Armero_1-03.png">
     <style>
         .flecha-siguiente {
             position: fixed;
